Add API Doc In Footer

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     </p>
     <p class="mb-1">ด้วยรัก | หลายบาท</p>
     <p class="mb-0">VAPI : <a href="https://vapi.many.win/">vapi.many.win</a></p>
+    <p class="mb-0">VAPI Doc : <a href="https://git.manybahtpage.com/vapi/">VAPI Swagger</a></p>
   </div>
 </footer>
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
