--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta content="https://v.manybahtpage.com" property="og:url">
     <meta content="ตัวอย่างเว็บใช้งาน VAPI" property="og:description">
     <meta content="website" property="og:type">
-    <meta content="https://cdn.jsdelivr.net/gh/manybaht/manybaht.github.io@b89c90e/storages/images/laibaht.webp" property="og:image">
+    <meta content="https://cdn.jsdelivr.net/gh/manybaht/manybaht.github.io@latest/storages/images/laibaht.webp" property="og:image">
     <title>Vtuber | หลายบาท</title>
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/manybaht/manybaht.github.io@main/storages/images/avatar.webp">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/manybaht/manybaht.github.io@latest/storages/images/avatar.webp">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
     <!-- Bootstrap core CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
