--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     <script>
       const main = document.getElementById("main");
       const main_button = document.getElementById("main_button");
-      let url = "https://vapi.many.win/";
+      const main_url = "https://vapi.many.win/";
+      let url = main_url;
       let index_count = 1;
 
       page_init(url);
@@ -158,7 +159,7 @@
         main_button.disabled = true;
         main_button.innerHTML = 'กำลังโหลด';
         index_count++;
-        page_init(`${url}${index_count}`);
+        page_init(`${url}${index_count}/`);
       }
 
       function vtuberreset() {
@@ -166,7 +167,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = "https://vapi.many.win/";
+        url = `${main_url}`;
         page_init(url);
       }
 
@@ -175,7 +176,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = "https://vapi.many.win/other/all/";
+        url = `${main_url}other/all/`;
         page_init(url);
       }
 
@@ -184,7 +185,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = "https://vapi.many.win/other/thai/";
+        url = `${main_url}other/thai/`;
         page_init(url);
       }
 
@@ -193,7 +194,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = "https://vapi.many.win/other/holo/";
+        url = `${main_url}other/holo/`;
         page_init(url);
       }
 
@@ -202,7 +203,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = "https://vapi.many.win/other/niji/";
+        url = `${main_url}other/niji/`;
         page_init(url);
       }
     </script>
