--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </p>
     <p class="mb-1">ด้วยรัก | หลายบาท</p>
     <p class="mb-0">VAPI : <a href="https://vapi.many.win/">vapi.many.win</a></p>
-    <p class="mb-0">VAPI Doc : <a href="https://git.manybahtpage.com/vapi/">VAPI Swagger</a></p>
+    <p class="mb-0">VAPI Doc : <a href="https://vapiswagger.manybahtpage.com/">VAPI Swagger</a></p>
   </div>
 </footer>
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
@@ -159,7 +159,7 @@
         main_button.disabled = true;
         main_button.innerHTML = 'กำลังโหลด';
         index_count++;
-        page_init(`${url}${index_count}/`);
+        page_init(`${url}${index_count}`);
       }
 
       function vtuberreset() {
@@ -176,7 +176,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = `${main_url}other/all/`;
+        url = `${main_url}other/all`;
         page_init(url);
       }
 
@@ -185,7 +185,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = `${main_url}other/thai/`;
+        url = `${main_url}other/thai`;
         page_init(url);
       }
 
@@ -194,7 +194,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = `${main_url}other/holo/`;
+        url = `${main_url}other/holo`;
         page_init(url);
       }
 
@@ -203,7 +203,7 @@
         main_button.innerHTML = 'กำลังโหลด';
         main.innerHTML = '';
         index_count = 0;
-        url = `${main_url}other/niji/`;
+        url = `${main_url}other/niji`;
         page_init(url);
       }
     </script>
